Got numbers to populate on calc display and fixed collapsing margins - not using 'calc-display'

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,8 +28,17 @@ h1 {
     background-image: linear-gradient(135deg, gray -85%, white 55%, gray);
     border-radius: 10px;
     outline: 5px solid gray;
-
 }
+
+#numbDisplay {
+    margin: 0;
+    margin-top: 35px;
+    margin-right: 5px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 60px;
+}
+
 
 #calc-btns {
     margin-top: 25px;
